# mundy-math

./: .gitignore  CMakeLists.txt  MundyMath.cpp  MundyMath.h  README.md  Result.h
.github/workflows/: c-cpp.yml
Google_tests/: MundyMathTests.cpp  MundyMathTests.h
